force-app/main/default/objects/Target_Item__c/Target_Item__c.object-meta.xml
<CustomObject>
    <label>NotUsed_Target Item</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Target Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NotUsed_Target Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>