force-app/main/default/objects/Target_Item__c/fields/Achieved_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Achieved_Percentage__c</fullName>
    <formula>Total_Actual__c /  Target_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Achieved Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>