force-app/main/default/objects/Target_Item__c/fields/Actual_Value__c.field-meta.xml
<CustomField>
    <fullName>Actual_Value__c</fullName>
    <defaultValue>(0)</defaultValue>
    <label>Self Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>