force-app/main/default/objects/Target_Item__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <formula>IF(Executive_Id__c != null,Target__r.Executive__r.FirstName +&apos; &apos; + Target__r.Executive__r.LastName, 
			IF(Customer_Id__c != null,Target__r.Account__r.Name, 
			Account__r.Name ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned To</label>
    <type>Text</type>
</CustomField>