force-app/main/default/objects/Target_Item__c/fields/Category_Name__c.field-meta.xml
<CustomField>
    <fullName>Category_Name__c</fullName>
    <formula>Target_Logic__r.Product_Category__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category Name</label>
    <type>Text</type>
</CustomField>