force-app/main/default/objects/Target_Item__c/fields/Exe_2ManagerId__c.field-meta.xml
<CustomField>
    <fullName>Exe_2ManagerId__c</fullName>
    <formula>Owner:User.Manager.Manager.FirstName +&apos; &apos;+ Owner:User.Manager.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exe 2ManagerId</label>
    <type>Text</type>
</CustomField>