force-app/main/default/objects/Target_Item__c/fields/Exe_Manager__c.field-meta.xml
<CustomField>
    <fullName>Exe_Manager__c</fullName>
    <formula>Owner:User.Manager.FirstName +&apos; &apos;+ Owner:User.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exe Manager</label>
    <type>Text</type>
</CustomField>