force-app/main/default/objects/Target_Item__c/fields/Executive_Id__c.field-meta.xml
<CustomField>
    <fullName>Executive_Id__c</fullName>
    <formula>CASESAFEID(Target__r.Executive__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Executive Id</label>
    <type>Text</type>
</CustomField>