force-app/main/default/objects/Target_Item__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>Target_Item__c</referenceTo>
    <relationshipName>Target_Items</relationshipName>
    <type>Lookup</type>
</CustomField>