force-app/main/default/objects/Target_Item__c/fields/Period_Date__c.field-meta.xml
<CustomField>
    <fullName>Period_Date__c</fullName>
    <formula>Target__r.Period__r.Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period Date</label>
    <type>Date</type>
</CustomField>