force-app/main/default/objects/Target_Item__c/fields/Period_Name__c.field-meta.xml
<CustomField>
    <fullName>Period_Name__c</fullName>
    <formula>Target__r.Period__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period Name</label>
    <type>Text</type>
</CustomField>