force-app/main/default/objects/Target_Item__c/fields/Profile_sort_Number__c.field-meta.xml
<CustomField>
    <fullName>Profile_sort_Number__c</fullName>
    <formula>2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile sort Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>