force-app/main/default/objects/Target_Item__c/fields/Self_Actual__c.field-meta.xml
<CustomField>
    <fullName>Self_Actual__c</fullName>
    <formula>Actual_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Self Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>