force-app/main/default/objects/Target_Item__c/fields/Self_Target__c.field-meta.xml
<CustomField>
    <fullName>Self_Target__c</fullName>
    <formula>Target_Value__c  -  Team_s_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Self Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>