force-app/main/default/objects/Target_Item__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target</label>
    <referenceTo>Target__c</referenceTo>
    <relationshipName>Target_Items</relationshipName>
    <type>Lookup</type>
</CustomField>