force-app/main/default/objects/Target_Item__c/fields/Target_Logic__c.field-meta.xml
<CustomField>
    <fullName>Target_Logic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Logic</label>
    <referenceTo>Target_Logic__c</referenceTo>
    <relationshipName>Target_Items</relationshipName>
    <type>Lookup</type>
</CustomField>