force-app/main/default/objects/Target_Item__c/fields/Target_Value__c.field-meta.xml
<CustomField>
    <fullName>Target_Value__c</fullName>
    <label>Total Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>