force-app/main/default/objects/Target_Item__c/fields/Team_s_Actual__c.field-meta.xml
<CustomField>
    <fullName>Team_s_Actual__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Team&apos;s Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>