force-app/main/default/objects/Target_Item__c/fields/Team_s_Actual_Formula__c.field-meta.xml
<CustomField>
    <fullName>Team_s_Actual_Formula__c</fullName>
    <formula>Team_s_Actual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team&apos;s Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>