force-app/main/default/objects/Target_Item__c/fields/Total_Actual__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual__c</fullName>
    <formula>Actual_Value__c  +  Team_s_Actual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>