force-app/main/default/objects/Target_Item__c/fields/Weighted_Achievement_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Achievement_Percentage__c</fullName>
    <formula>((Actual_Value__c /  Self_Target__c ) * Target_Logic__r.Weightage__c)/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted Achievement Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>